Detalhe com ::before

--- a/createAccount/createAccount.html
+++ b/createAccount/createAccount.html
@@ -31,8 +31,9 @@
             </div>
 
             <div class="signUp">
-                <span class="detail"></span>
-                <h2>Sign up</h2>
+                <div class="detail">
+                    <h2>Sign in</h2>
+                </div>
                 <div class="input">
                     <div class="input-container">
                         <label for="name"><img src="/assets/icons/login/useraccount.svg"></label>
