Melhorando o uso do ::before nos detalhes das paginas Sign in/up

--- a/login/login.html
+++ b/login/login.html
@@ -30,10 +30,8 @@
             <div class="signInLogo">
                 <img src="/assets/logos/won-black.svg" alt="Logo Won">
             </div>
-            <div class="signIn">
-                <div class="detail">
-                    <h2>Sign in</h2>
-                </div>
+            <div class="signIn" id="detail">
+                <h2>Sign in</h2>
                 <div class="input">
                     <div class="input-container">
                         <label for="email"><img src="/assets/icons/login/email.svg"></label>
