--- a/createAccount/createAccount.html
+++ b/createAccount/createAccount.html
@@ -30,10 +30,8 @@
                 <img src="/assets/logos/won-black.svg" alt="Logo Won">
             </div>
 
-            <div class="signUp">
-                <div class="detail">
-                    <h2>Sign in</h2>
-                </div>
+            <div class="signUp"  id="detail">
+                <h2>Sign in</h2>
                 <div class="input">
                     <div class="input-container">
                         <label for="name"><img src="/assets/icons/login/useraccount.svg"></label>
