--- a/createAccount/createAccount.html
+++ b/createAccount/createAccount.html
@@ -30,8 +30,10 @@
                 <img src="/assets/logos/won-black.svg" alt="Logo Won">
             </div>
 
-            <div class="signUp"  id="detail">
-                <h2>Sign in</h2>
+            <div class="signUp">
+                <div class="detail">
+                    <h2>Sign up</h2>
+                </div>
                 <div class="input">
                     <div class="input-container">
                         <label for="name"><img src="/assets/icons/login/useraccount.svg"></label>
