--- a/login/login.html
+++ b/login/login.html
@@ -30,8 +30,10 @@
             <div class="signInLogo">
                 <img src="/assets/logos/won-black.svg" alt="Logo Won">
             </div>
-            <div class="signIn" id="detail">
-                <h2>Sign in</h2>
+            <div class="signIn">
+                <div class="detail">
+                    <h2>Sign in</h2>
+                </div>
                 <div class="input">
                     <div class="input-container">
                         <label for="email"><img src="/assets/icons/login/email.svg"></label>
