criado a parte introdutoria da page home

--- a/index.html
+++ b/index.html
@@ -10,26 +10,38 @@
     <title>Won Games</title>
 </head>
 <body>
-    <nav class="navbar">
-        <div class="grid">
-            <div class="flex-nav-left">
-                <img src="assets/logos/won-white.svg" alt="Logo Won">
-                <a class="linkHover" href="#">Home</a>
-                <a class="linkHover" href="#">Store</a>
+    <header>
+        <nav class="navbar">
+            <div class="nav-grid">
+                <div class="flex-nav-left">
+                    <img src="assets/logos/won-white.svg" alt="Logo Won">
+                    <a class="linkHover" href="#">Home</a>
+                    <a class="linkHover" href="#">Store</a>
+                </div>
+                <div class="flex-nav-right">
+                    <img class="search" src="assets/icons/home/search.svg" alt="">
+                    <img src="assets/icons/home/shopping_cart.svg" alt="">
+                    <a class="button-signIn" href="#">Sign in</a>
+                </div>
             </div>
-            <div class="flex-nav-right">
-                <img class="search" src="assets/icons/home/search.svg" alt="">
-                <img src="assets/icons/home/shopping_cart.svg" alt="">
-                <a class="button-signIn" href="#">Sign in</a>
-            </div>
-        </div>
-    </nav>
+        </nav>
+    </header>
 
-    <section>
-        <h1>Lorem ispum</h1>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eveniet ea voluptatibus obcaecati. Odio deleniti, officiis autem ratione reprehenderit harum ipsa nemo ut dolores, iste eveniet alias facilis repellendus? Necessitatibus, non!</p>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eveniet ea voluptatibus obcaecati. Odio deleniti, officiis autem ratione reprehenderit harum ipsa nemo ut dolores, iste eveniet alias facilis repellendus? Necessitatibus, non!</p>
-    </section>
+    <main>
+        <article>
+            <div class="content">
+                <div class="intro">
+                    <img src="assets/images/game-crashlands.png" alt="">
+                    <div class="intro-content">
+                        <h2>Defy death</h2>
+                        <p>Play the new <span>CrashLands</span> season</p>
+                        <button type="button" class="button-buy" name="buy">Buy now</button>
+                    </div>
+                </div>
+            </div>
+        </article>
+    </main>
+    
     <footer>
         <img class="logo-won-black" src="assets/logos/won-black.svg" alt="Logo on">
         <div class="grid-footer">
