Criação do estilo de carrosel de jogos

--- a/index.html
+++ b/index.html
@@ -40,6 +40,43 @@
                 </div>
             </div>
         </article>
+
+        <section>
+            <div>
+                <h1>News</h1>
+                <ul class="news-ul">
+
+                    <li class="news-list">
+                        <img class="news-list-image" src="assets/images/game-populationzero.png" alt="">
+
+                        <div class="grid-content-list">
+                            <span class="game-name">Population Zero</span>
+
+                            <div class="flex-content-list">
+                                <img class="favorite" src="assets/icons/home/favorite_border.svg" alt="">
+                            </div>
+
+                            <span class="game-producer">Other Ocean</span>
+                            
+                            <div class="grid-price">
+                                <span class="price">$215,00</span>
+                            </div>
+                        </div>
+
+                    </li>
+
+                    <li class="news-list">
+                        <img class="news-list-image" src="assets/images/game-projectwinter.png" alt="">
+                        Project Winter
+                    </li>
+                    <li class="news-list">
+                        <img class="news-list-image" src="assets/images/game-borderlands.png" alt="">
+                        Borderlands 3
+                    </li>
+                </ul>
+            </div>
+        </section>
+
     </main>
     
     <footer>
