--- a/index.html
+++ b/index.html
@@ -42,36 +42,48 @@
         </article>
 
         <section>
-            <div>
-                <h1>News</h1>
+            <div class="section-news">
+                <h1 class="news">News</h1>
                 <ul class="news-ul">
-
                     <li class="news-list">
                         <img class="news-list-image" src="assets/images/game-populationzero.png" alt="">
-
                         <div class="grid-content-list">
                             <span class="game-name">Population Zero</span>
-
                             <div class="flex-content-list">
                                 <img class="favorite" src="assets/icons/home/favorite_border.svg" alt="">
                             </div>
-
-                            <span class="game-producer">Other Ocean</span>
-                            
+                            <span class="game-producer">Enplex Games</span>                            
                             <div class="grid-price">
                                 <span class="price">$215,00</span>
                             </div>
                         </div>
-
                     </li>
 
                     <li class="news-list">
-                        <img class="news-list-image" src="assets/images/game-projectwinter.png" alt="">
-                        Project Winter
+                        <img class="news-list-image" src="assets/images/game-projectwinter.png" alt="">                        
+                        <div class="grid-content-list">
+                            <span class="game-name">Project Winter</span>
+                            <div class="flex-content-list">
+                                <img class="favorite" src="assets/icons/home/favorite_border.svg" alt="">
+                            </div>
+                            <span class="game-producer">Other Ocean</span>                            
+                            <div class="grid-price">
+                                <span class="price">$215,00</span>
+                            </div>
+                        </div>
                     </li>
                     <li class="news-list">
                         <img class="news-list-image" src="assets/images/game-borderlands.png" alt="">
-                        Borderlands 3
+                        <div class="grid-content-list">
+                            <span class="game-name">Borderlands 3</span>
+                            <div class="flex-content-list">
+                                <img class="favorite" src="assets/icons/home/favorite_border.svg" alt="">
+                            </div>
+                            <span class="game-producer">Gearbox Software</span>                            
+                            <div class="grid-price">
+                                <span class="price">$215,00</span>
+                            </div>
+                        </div>
                     </li>
                 </ul>
             </div>
