--- a/index.html
+++ b/index.html
@@ -29,16 +29,23 @@
 
     <main>
         <article>
-            <div class="content">
-                <div class="intro">
-                    <img src="assets/images/game-crashlands.png" alt="">
-                    <div class="intro-content">
-                        <h2>Defy death</h2>
-                        <p>Play the new <span>CrashLands</span> season</p>
-                        <button type="button" class="button-buy" name="buy">Buy now</button>
+                <div class="flex-content">
+                    <div class="intro">
+                        <span class="bestselling">Bestselling</span>
+                        <img src="assets/images/game-crashlands.png" alt="">
+                        <div class="intro-content">
+                            <h2>Defy death</h2>
+                            <p>Play the new <span>CrashLands</span> season</p>
+                            <button type="button" class="button-buy" name="buy">Buy now</button>
+                        </div>                        
+                    </div>
+                    <div class="radio-carrosel-intro">
+                        <input class="radio" type="radio" name="carrosel-intro" id="carrosel-intro"></input>
+                        <input class="radio" type="radio" name="carrosel-intro" id="carrosel-intro"></input>
+                        <input class="radio" type="radio" name="carrosel-intro" id="carrosel-intro"></input>
+                        <input class="radio" type="radio" name="carrosel-intro" id="carrosel-intro"></input>
                     </div>
                 </div>
-            </div>
         </article>
 
         <section>
