Criação do botão add ao carrinho

--- a/index.html
+++ b/index.html
@@ -50,52 +50,59 @@
 
         <section>
             <div class="section-news">
-                <h1 class="news">News</h1>
-                <ul class="news-ul">
-                    <li class="news-list">
-                        <img class="news-list-image" src="assets/images/game-populationzero.png" alt="">
-                        <div class="grid-content-list">
-                            <span class="game-name">Population Zero</span>
-                            <div class="flex-content-list">
-                                <img class="favorite" src="assets/icons/home/favorite_border.svg" alt="">
+                <div class="section-news-carousel">
+                    <h1 class="news-title">News</h1>
+                    <ul class="news-ul">
+                        <li class="news-list">
+                            <img class="news-list-image" src="assets/images/game-populationzero.png" alt="">
+                            <div class="grid-content-list">
+                                <span class="game-name">Population Zero</span>
+                                <div class="flex-content-list">
+                                    <img class="favorite" src="assets/icons/home/favorite_border.svg" alt="">
+                                </div>
+                                <span class="game-producer">Enplex Games</span>                            
+                                <div class="grid-price">
+                                    <span class="price">$215,00</span>
+                                    <span><button class="section-button-add"><img class="image-button-add" src="assets/icons/home/add_shopping_cart.svg" alt=""></button></span>
+                                </div>
                             </div>
-                            <span class="game-producer">Enplex Games</span>                            
-                            <div class="grid-price">
-                                <span class="price">$215,00</span>
-                            </div>
-                        </div>
-                    </li>
+                        </li>
 
-                    <li class="news-list">
-                        <img class="news-list-image" src="assets/images/game-projectwinter.png" alt="">                        
-                        <div class="grid-content-list">
-                            <span class="game-name">Project Winter</span>
-                            <div class="flex-content-list">
-                                <img class="favorite" src="assets/icons/home/favorite_border.svg" alt="">
+                        <li class="news-list">
+                            <img class="news-list-image" src="assets/images/game-projectwinter.png" alt="">                        
+                            <div class="grid-content-list">
+                                <span class="game-name">Project Winter</span>
+                                <div class="flex-content-list">
+                                    <img class="favorite" src="assets/icons/home/favorite_border.svg" alt="">
+                                </div>
+                                <span class="game-producer">Other Ocean</span>                            
+                                <div class="grid-price">
+                                    <span class="price">$215,00</span>
+                                    <span><button class="section-button-add"><img class="image-button-add" src="assets/icons/home/add_shopping_cart.svg" alt=""></button></span>
+                                </div>
                             </div>
-                            <span class="game-producer">Other Ocean</span>                            
-                            <div class="grid-price">
-                                <span class="price">$215,00</span>
+                        </li>
+                        <li class="news-list">
+                            <img class="news-list-image" src="assets/images/game-borderlands.png" alt="">
+                            <div class="grid-content-list">
+                                <span class="game-name">Borderlands 3</span>
+                                <div class="flex-content-list">
+                                    <img class="favorite" src="assets/icons/home/favorite_border.svg" alt="">
+                                </div>
+                                <span class="game-producer">Gearbox Software</span>                            
+                                <div class="grid-price">
+                                    <span class="price">$215,00</span>
+                                    <span><button class="section-button-add"><img class="image-button-add" src="assets/icons/home/add_shopping_cart.svg" alt=""></button></span>
+                                </div>
                             </div>
-                        </div>
-                    </li>
-                    <li class="news-list">
-                        <img class="news-list-image" src="assets/images/game-borderlands.png" alt="">
-                        <div class="grid-content-list">
-                            <span class="game-name">Borderlands 3</span>
-                            <div class="flex-content-list">
-                                <img class="favorite" src="assets/icons/home/favorite_border.svg" alt="">
-                            </div>
-                            <span class="game-producer">Gearbox Software</span>                            
-                            <div class="grid-price">
-                                <span class="price">$215,00</span>
-                            </div>
-                        </div>
-                    </li>
-                </ul>
+                        </li>
+                    </ul>
+                </div>
+                <div class="section-arrow-next">
+                    <span><img src="assets/icons/home/arrow-next.svg" alt=""></span>
+                </div>
             </div>
         </section>
-
     </main>
     
     <footer>
