more content in page home

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <section>
             <div class="section-news">
                 <div class="section-news-carousel">
-                    <h1 class="news-title">News</h1>
+                    <h1 class="layout-title">News</h1>
                     <ul class="news-ul">
                         <li class="news-list">
                             <img class="news-list-image" src="assets/images/game-populationzero.png" alt="">
@@ -103,6 +103,192 @@
                 </div>
             </div>
         </section>
+
+        <section class="teste">
+
+            <div class="section-content">
+                <div class="section-banner">
+                    <h1 class="layout-title">Most popular</h1>
+                    <div class="banner">
+                        <img src="assets/images/detail-banner-reddead.png" alt="">
+                        <div class="banner-content">                
+                            <h2>Read Dead it’s back</h2>
+                            <p>Come see John’s new adventures</p>
+                            <a href="#">Buy now</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="section-news">
+                <div class="section-news-carousel">
+                    <ul class="news-ul">
+                        <li class="news-list">
+                            <img class="news-list-image" src="assets/images/game-populationzero.png" alt="">
+                            <div class="grid-content-list">
+                                <span class="game-name">Population Zero</span>
+                                <div class="flex-content-list">
+                                    <img class="favorite" src="assets/icons/home/favorite_border.svg" alt="">
+                                </div>
+                                <span class="game-producer">Enplex Games</span>                            
+                                <div class="grid-price">
+                                    <span class="price">$215,00</span>
+                                </div>
+                            </div>
+                        </li>
+
+                        <li class="news-list">
+                            <img class="news-list-image" src="assets/images/game-projectwinter.png" alt="">                        
+                            <div class="grid-content-list">
+                                <span class="game-name">Project Winter</span>
+                                <div class="flex-content-list">
+                                    <img class="favorite" src="assets/icons/home/favorite_border.svg" alt="">
+                                </div>
+                                <span class="game-producer">Other Ocean</span>                            
+                                <div class="grid-price">
+                                    <span class="price">$215,00</span>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="news-list">
+                            <img class="news-list-image" src="assets/images/game-borderlands.png" alt="">
+                            <div class="grid-content-list">
+                                <span class="game-name">Borderlands 3</span>
+                                <div class="flex-content-list">
+                                    <img class="favorite" src="assets/icons/home/favorite_border.svg" alt="">
+                                </div>
+                                <span class="game-producer">Gearbox Software</span>                            
+                                <div class="grid-price">
+                                    <span class="price">$215,00</span>
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+                <div class="section-arrow-next">
+                    <span><img src="assets/icons/home/arrow-next-white.svg" alt=""></span>
+                </div>
+            </div>
+
+            <div class="section-news">
+                <div class="section-arrow-back">
+                    <span><img src="assets/icons/home/arrow-back-white.svg" alt=""></span>
+                </div>
+                <div class="section-news-carousel" id="upcoming-space">
+                    <h1 class="layout-title" id="upcoming">Upcoming</h1>
+                    <ul class="news-ul">
+                        <li class="news-list">
+                            <img class="news-list-image" src="assets/images/game-populationzero.png" alt="">
+                            <div class="grid-content-list">
+                                <span class="game-name">Population Zero</span>
+                                <div class="flex-content-list">
+                                    <img class="favorite" src="assets/icons/home/favorite_border.svg" alt="">
+                                </div>
+                                <span class="game-producer">Enplex Games</span>                            
+                                <div class="grid-price">
+                                    <span class="price">$215,00</span>
+                                </div>
+                            </div>
+                        </li>
+
+                        <li class="news-list">
+                            <img class="news-list-image" src="assets/images/game-projectwinter.png" alt="">                        
+                            <div class="grid-content-list">
+                                <span class="game-name">Project Winter</span>
+                                <div class="flex-content-list">
+                                    <img class="favorite" src="assets/icons/home/favorite_border.svg" alt="">
+                                </div>
+                                <span class="game-producer">Other Ocean</span>                            
+                                <div class="grid-price">
+                                    <span class="price">$215,00</span>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="news-list">
+                            <img class="news-list-image" src="assets/images/game-borderlands.png" alt="">
+                            <div class="grid-content-list">
+                                <span class="game-name">Borderlands 3</span>
+                                <div class="flex-content-list">
+                                    <img class="favorite" src="assets/icons/home/favorite_border.svg" alt="">
+                                </div>
+                                <span class="game-producer">Gearbox Software</span>                            
+                                <div class="grid-price">
+                                    <span class="price">$215,00</span>
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+                <div class="section-arrow-next">
+                    <span><img src="assets/icons/home/arrow-next-white.svg" alt=""></span>
+                </div>
+            </div>
+
+            <div class="section-content">
+                <div class="section-banner">
+                    <div class="banner">
+                        <div class="banner-content">                
+                            <h2>Read Dead it’s back</h2>
+                            <p>Come see John’s new adventures</p>
+                            <a href="#">Buy now</a>
+                        </div>
+                        <img src="assets/images/detail-banner-reddead.png" alt="">
+                    </div>
+                </div>
+            </div>
+
+            <div class="section-news">
+                <div class="section-news-carousel">
+                    <ul class="news-ul">
+                        <li class="news-list">
+                            <img class="news-list-image" src="assets/images/game-populationzero.png" alt="">
+                            <div class="grid-content-list">
+                                <span class="game-name">Population Zero</span>
+                                <div class="flex-content-list">
+                                    <img class="favorite" src="assets/icons/home/favorite_border.svg" alt="">
+                                </div>
+                                <span class="game-producer">Enplex Games</span>                            
+                                <div class="grid-price">
+                                    <span class="price">$215,00</span>
+                                </div>
+                            </div>
+                        </li>
+
+                        <li class="news-list">
+                            <img class="news-list-image" src="assets/images/game-projectwinter.png" alt="">                        
+                            <div class="grid-content-list">
+                                <span class="game-name">Project Winter</span>
+                                <div class="flex-content-list">
+                                    <img class="favorite" src="assets/icons/home/favorite_border.svg" alt="">
+                                </div>
+                                <span class="game-producer">Other Ocean</span>                            
+                                <div class="grid-price">
+                                    <span class="price">$215,00</span>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="news-list">
+                            <img class="news-list-image" src="assets/images/game-borderlands.png" alt="">
+                            <div class="grid-content-list">
+                                <span class="game-name">Borderlands 3</span>
+                                <div class="flex-content-list">
+                                    <img class="favorite" src="assets/icons/home/favorite_border.svg" alt="">
+                                </div>
+                                <span class="game-producer">Gearbox Software</span>                            
+                                <div class="grid-price">
+                                    <span class="price">$215,00</span>
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+                <div class="section-arrow-next">
+                    <span><img src="assets/icons/home/arrow-next-white.svg" alt=""></span>
+                </div>
+            </div>
+
+        </section>
+
     </main>
     
     <footer>
