--- a/index.html
+++ b/index.html
@@ -241,6 +241,84 @@
                 <div class="section-news-carousel">
                     <ul class="news-ul">
                         <li class="news-list">
+                            <span class="discount">20% OFF</span>
+                            <img class="news-list-image" src="assets/images/game-populationzero.png" alt="">
+                            <div class="grid-discount-list">
+                                <div class="grid-discount-desc">
+                                    <span class="game-name">Population Zero</span>
+                                    <div class="flex-content-list">
+                                        <img class="favorite" src="assets/icons/home/favorite_border.svg" alt="">
+                                    </div>
+                                    <span class="game-producer">Enplex Games</span>
+                                </div>                      
+                                <div class="grid-price">
+                                    <span><del>$235,00</del></span>
+                                    <span class="price">$215,00</span>
+                                </div>
+                            </div>
+                        </li>
+
+                        <li class="news-list">
+                            <span class="discount">20% OFF</span>
+                            <img class="news-list-image" src="assets/images/game-projectwinter.png" alt="">                        
+                            <div class="grid-discount-list">
+                                <div class="grid-discount-desc">
+                                    <span class="game-name">Project Winter</span>
+                                    <div class="flex-content-list">
+                                        <img class="favorite" src="assets/icons/home/favorite_border.svg" alt="">
+                                    </div>
+                                    <span class="game-producer">Other Ocean</span>     
+                                </div>                       
+                                <div class="grid-price">
+                                    <span><del>$235,00</del></span>
+                                    <span class="price">$215,00</span>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="news-list">
+                            <span class="discount">20% OFF</span>
+                            <img class="news-list-image" src="assets/images/game-borderlands.png" alt="">
+                            <div class="grid-discount-list">
+                                <div class="grid-discount-desc">
+                                    <span class="game-name">Borderlands 3</span>
+                                    <div class="flex-content-list">
+                                        <img class="favorite" src="assets/icons/home/favorite_border.svg" alt="">
+                                    </div>
+                                    <span class="game-producer">Gearbox Software</span>   
+                                </div>
+                                <div class="grid-price">
+                                    <span><del>$235,00</del></span>
+                                    <span class="price">$215,00</span>
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+                <div class="section-arrow-next">
+                    <span><img src="assets/icons/home/arrow-next-white.svg" alt=""></span>
+                </div>
+            </div>
+
+            <div class="section-content">
+                <div class="section-banner">
+                    <h1 class="layout-title">Free games</h1>
+                    <div class="banner-free-games">
+                        <img src="assets/images/detail-banner-free-games.png" alt="">
+                        <div class="banner-content">                
+                            <h2>CS:GO, the most classic game </h2>
+                            <a href="#">Download now</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="section-news">
+                <div class="freegames-arrow-back">
+                    <span><img src="assets/icons/home/arrow-back-white.svg" alt=""></span>
+                </div>
+                <div class="section-news-carousel" id="upcoming-space">
+                    <ul class="news-ul">
+                        <li class="news-list">
                             <img class="news-list-image" src="assets/images/game-populationzero.png" alt="">
                             <div class="grid-content-list">
                                 <span class="game-name">Population Zero</span>
