criacao nav Store

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
             <div class="nav-grid">
                 <div class="flex-nav-left">
                     <img src="assets/logos/won-white.svg" alt="Logo Won">
-                    <a class="linkHover" href="#">Home</a>
-                    <a class="linkHover" href="#">Store</a>
+                    <a class="link" href="#">Home</a>
+                    <a href="#">Store</a>
                 </div>
                 <div class="flex-nav-right">
                     <img class="search" src="assets/icons/home/search.svg" alt="">
