checkbox and radio button add

--- a/store/store.html
+++ b/store/store.html
@@ -29,5 +29,107 @@
         </nav>
     </header>
 
+    <main>
+        <section>
+            <div class="grid-section">
+                <div class="filter">
+
+                    <div class="filter-price">
+                        <h3>Price</h3>
+                        <div class="container-checkbox">
+                            <input id="checkbox-price50" type="checkbox">
+                            <label for="checkbox-price50">Under $50</label>
+                        </div>
+                        <div class="container-checkbox">
+                            <input id="checkbox-price100" type="checkbox">
+                            <label for="checkbox-price100">Under $100</label>
+                        </div>
+                        <div class="container-checkbox">
+                            <input id="checkbox-price150" type="checkbox">
+                            <label for="checkbox-price150">Under $150</label>
+                        </div>
+                        <div class="container-checkbox">
+                            <input id="checkbox-price200" type="checkbox">
+                            <label for="checkbox-price200">Under $200</label>
+                        </div>
+                        <div class="container-checkbox">
+                            <input id="checkbox-free" type="checkbox">
+                            <label for="checkbox-free">Free</label>
+                        </div>
+                        <div class="container-checkbox">
+                            <input id="checkbox-discounted" type="checkbox">
+                            <label for="checkbox-discounted">Discounted</label>
+                        </div>
+                    </div>
+
+                    <div class="filter-sort-by">
+                        <h3>Sort by</h3>
+                        <div class="container-radio">
+                            <input id="high-to-low" type="radio" name="sort-by-radio">
+                            <label for="high-to-low">High to low</label>
+                        </div>
+                        <div class="container-radio">
+                            <input id="low-to-high" type="radio" name="sort-by-radio">
+                            <label for="low-to-high">Low to high</label>
+                        </div>
+                    </div>
+
+                    <div class="filter-system">
+                        <h3>System</h3>
+                        <div class="container-checkbox">
+                            <input id="checkbox-windows" type="checkbox">
+                            <label for="checkbox-windows">Windows</label>
+                        </div>
+                        <div class="container-checkbox">
+                            <input id="checkbox-linux" type="checkbox">
+                            <label for="checkbox-linux">Linux</label>
+                        </div>
+                        <div class="container-checkbox">
+                            <input id="checkbox-mac" type="checkbox">
+                            <label for="checkbox-mac">Mac</label>
+                        </div>
+                    </div>
+
+                    <div class="filter-price">
+                        <h3>Genre</h3>
+                        <div class="container-checkbox">
+                            <input id="checkbox-action" type="checkbox">
+                            <label for="checkbox-action">Action</label>
+                        </div>
+                        <div class="container-checkbox">
+                            <input id="checkbox-adventure" type="checkbox">
+                            <label for="checkbox-adventure">Adventure</label>
+                        </div>
+                        <div class="container-checkbox">
+                            <input id="checkbox-fps" type="checkbox">
+                            <label for="checkbox-fps">FPS</label>
+                        </div>
+                        <div class="container-checkbox">
+                            <input id="checkbox-mmorpg" type="checkbox">
+                            <label for="checkbox-mmorpg">MMORPG</label>
+                        </div>
+                        <div class="container-checkbox">
+                            <input id="checkbox-rpg" type="checkbox">
+                            <label for="checkbox-rpg">RPG</label>
+                        </div>
+                        <div class="container-checkbox">
+                            <input id="checkbox-indie" type="checkbox">
+                            <label for="checkbox-indie">Indie</label>
+                        </div>
+                        <div class="container-checkbox">
+                            <input id="checkbox-shooters" type="checkbox">
+                            <label for="checkbox-shooters">Shooters</label>
+                        </div>
+                        <div class="container-checkbox">
+                            <input id="checkbox-simulation" type="checkbox">
+                            <label for="checkbox-simulation">Simulation</label>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </section>
+    </main>
+
 </body>
 </html>
