--- a/store/store.html
+++ b/store/store.html
@@ -90,7 +90,7 @@
                         </div>
                     </div>
 
-                    <div class="filter-price">
+                    <div class="filter-genre">
                         <h3>Genre</h3>
                         <div class="container-checkbox">
                             <input id="checkbox-action" type="checkbox">
@@ -126,6 +126,189 @@
                         </div>
                     </div>
 
+                </div>
+
+                <div class="content-section">
+                    <div class="search-input">
+                        <div class="input-container">
+                            <input class="search-input-container" type="text" id="search-game" placeholder="Search for">
+                            <label class="label-search-input" for="search-game"><img src="../assets/icons/home/search-gray.svg"></label>
+                        </div>
+                    </div>
+                    <div class="grid-list-games">
+                        <div class="section-news-carousel">
+                            <ul class="news-ul">
+                                <li class="news-list">
+                                    <img class="news-list-image" src="../assets/images/game-populationzero.png" alt="">
+                                    <div class="grid-content-list">
+                                        <span class="game-name">Population Zero</span>
+                                        <div class="flex-content-list">
+                                            <img class="favorite" src="../assets/icons/home/favorite_border.svg" alt="">
+                                        </div>
+                                        <span class="game-producer">Enplex Games</span>
+                                        <div class="grid-price">
+                                            <span class="price">$215,00</span>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li class="news-list">
+                                    <img class="news-list-image" src="../assets/images/game-projectwinter.png" alt="">
+                                    <div class="grid-content-list">
+                                        <span class="game-name">Project Winter</span>
+                                        <div class="flex-content-list">
+                                            <img class="favorite" src="../assets/icons/home/favorite_border.svg" alt="">
+                                        </div>
+                                        <span class="game-producer">Other Ocean</span>
+                                        <div class="grid-price">
+                                            <span class="price">$215,00</span>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li class="news-list">
+                                    <img class="news-list-image" src="../assets/images/game-borderlands.png" alt="">
+                                    <div class="grid-content-list">
+                                        <span class="game-name">Borderlands 3</span>
+                                        <div class="flex-content-list">
+                                            <img class="favorite" src="../assets/icons/home/favorite_border.svg" alt="">
+                                        </div>
+                                        <span class="game-producer">Gearbox Software</span>
+                                        <div class="grid-price">
+                                            <span class="price">$215,00</span>
+                                        </div>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="section-news-carousel">
+                            <ul class="news-ul">
+                                <li class="news-list">
+                                    <img class="news-list-image" src="../assets/images/game-populationzero.png" alt="">
+                                    <div class="grid-content-list">
+                                        <span class="game-name">Population Zero</span>
+                                        <div class="flex-content-list">
+                                            <img class="favorite" src="../assets/icons/home/favorite_border.svg" alt="">
+                                        </div>
+                                        <span class="game-producer">Enplex Games</span>
+                                        <div class="grid-price">
+                                            <span class="price">$215,00</span>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li class="news-list">
+                                    <img class="news-list-image" src="../assets/images/game-projectwinter.png" alt="">
+                                    <div class="grid-content-list">
+                                        <span class="game-name">Project Winter</span>
+                                        <div class="flex-content-list">
+                                            <img class="favorite" src="../assets/icons/home/favorite_border.svg" alt="">
+                                        </div>
+                                        <span class="game-producer">Other Ocean</span>
+                                        <div class="grid-price">
+                                            <span class="price">$215,00</span>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li class="news-list">
+                                    <img class="news-list-image" src="../assets/images/game-borderlands.png" alt="">
+                                    <div class="grid-content-list">
+                                        <span class="game-name">Borderlands 3</span>
+                                        <div class="flex-content-list">
+                                            <img class="favorite" src="../assets/icons/home/favorite_border.svg" alt="">
+                                        </div>
+                                        <span class="game-producer">Gearbox Software</span>
+                                        <div class="grid-price">
+                                            <span class="price">$215,00</span>
+                                        </div>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="section-news-carousel">
+                            <ul class="news-ul">
+                                <li class="news-list">
+                                    <img class="news-list-image" src="../assets/images/game-populationzero.png" alt="">
+                                    <div class="grid-content-list">
+                                        <span class="game-name">Population Zero</span>
+                                        <div class="flex-content-list">
+                                            <img class="favorite" src="../assets/icons/home/favorite_border.svg" alt="">
+                                        </div>
+                                        <span class="game-producer">Enplex Games</span>
+                                        <div class="grid-price">
+                                            <span class="price">$215,00</span>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li class="news-list">
+                                    <img class="news-list-image" src="../assets/images/game-projectwinter.png" alt="">
+                                    <div class="grid-content-list">
+                                        <span class="game-name">Project Winter</span>
+                                        <div class="flex-content-list">
+                                            <img class="favorite" src="../assets/icons/home/favorite_border.svg" alt="">
+                                        </div>
+                                        <span class="game-producer">Other Ocean</span>
+                                        <div class="grid-price">
+                                            <span class="price">$215,00</span>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li class="news-list">
+                                    <img class="news-list-image" src="../assets/images/game-borderlands.png" alt="">
+                                    <div class="grid-content-list">
+                                        <span class="game-name">Borderlands 3</span>
+                                        <div class="flex-content-list">
+                                            <img class="favorite" src="../assets/icons/home/favorite_border.svg" alt="">
+                                        </div>
+                                        <span class="game-producer">Gearbox Software</span>
+                                        <div class="grid-price">
+                                            <span class="price">$215,00</span>
+                                        </div>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="section-news-carousel">
+                            <ul class="news-ul">
+                                <li class="news-list">
+                                    <img class="news-list-image" src="../assets/images/game-populationzero.png" alt="">
+                                    <div class="grid-content-list">
+                                        <span class="game-name">Population Zero</span>
+                                        <div class="flex-content-list">
+                                            <img class="favorite" src="../assets/icons/home/favorite_border.svg" alt="">
+                                        </div>
+                                        <span class="game-producer">Enplex Games</span>
+                                        <div class="grid-price">
+                                            <span class="price">$215,00</span>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li class="news-list">
+                                    <img class="news-list-image" src="../assets/images/game-projectwinter.png" alt="">
+                                    <div class="grid-content-list">
+                                        <span class="game-name">Project Winter</span>
+                                        <div class="flex-content-list">
+                                            <img class="favorite" src="../assets/icons/home/favorite_border.svg" alt="">
+                                        </div>
+                                        <span class="game-producer">Other Ocean</span>
+                                        <div class="grid-price">
+                                            <span class="price">$215,00</span>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li class="news-list">
+                                    <img class="news-list-image" src="../assets/images/game-borderlands.png" alt="">
+                                    <div class="grid-content-list">
+                                        <span class="game-name">Borderlands 3</span>
+                                        <div class="flex-content-list">
+                                            <img class="favorite" src="../assets/icons/home/favorite_border.svg" alt="">
+                                        </div>
+                                        <span class="game-producer">Gearbox Software</span>
+                                        <div class="grid-price">
+                                            <span class="price">$215,00</span>
+                                        </div>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
