--- a/store/store.html
+++ b/store/store.html
@@ -127,7 +127,6 @@
                     </div>
 
                 </div>
-
                 <div class="content-section">
                     <div class="search-input">
                         <div class="input-container">
@@ -309,10 +308,47 @@
                             </ul>
                         </div>
                     </div>
+                    <div class="show-more">
+                        <p>Show more</p>
+                        <img src="../assets/icons/home/arrow-down-pink.svg" alt="">
+                    </div>
                 </div>
             </div>
         </section>
     </main>
+
+    <footer>
+        <div class="footer-content">
+            <img class="logo-won-black" src="../assets/logos/won-black.svg" alt="Logo on">
+            <div class="grid-footer">
+                <div class="contact">
+                    <h2>contact</h2>
+                    <p>suporte@wongames.gg</p>
+                    <p>+55 21 33283719</p>
+                </div>
+                <div class="followUs">
+                    <h2>follow us</h2>
+                    <a href="#">Instagram</a>
+                    <a href="#">Twitter</a>
+                    <a href="#">Youtube</a>
+                    <a href="#">Facebook</a>
+                </div>
+                <div class="links">
+                    <h2>links</h2>
+                    <a href="#">Home</a>
+                    <a href="#">Store</a>
+                    <a href="#">Discover</a>
+                </div>
+                <div class="location">
+                    <h2>location</h2>
+                    <p>Rua 7 de Maio</p>
+                    <p>527 - 89020330</p>
+                    <p>Rio de Janeiro, Brasil</p>
+                </div>
+            </div>
+            <p class="copywriting">Won Games 2020 © Todos os Direitos Reservados</p>
+        </div>
+    </footer>
 
 </body>
 </html>
