adicionado mais conteudo na pag store-borderlands

--- a/store/store-borderlands.html
+++ b/store/store-borderlands.html
@@ -27,6 +27,7 @@
         </nav>
     </header> 
     
+    <!-- ficaria dentro do main? -->
     <div class="grid-info-game">
             <h1>Borderlands 3</h1>
             <p>
@@ -73,16 +74,146 @@
 
         <section>
             <div class="description">
-                <div class="grid-description">
+                <div class="flex-description">
                     <img src="../assets/images/images-borderlands/image 4.png" alt="Imagem Borderlands 3">
-                    <h1>Description</h1>
+                    <div class="grid-description">
+                        <h1 class="detail-green">Description</h1>
+                        <p>
+                            The Homeworld games have been painstakingly re-mastered with key members of the original development team and taking critical influence and assistance from the passionate fan community. The Homeworld Remastered Collection introduces Relic's acclaimed space strategy games Homeworld.
+                        </p>
+                    </div>
+                </div>
+                <div class="grid-learn-more">
+                    <h2 class="detail-green">Learn more</h2>
                     <p>
-                        The Homeworld games have been painstakingly re-mastered with key members of the original development team and taking critical influence and assistance from the passionate fan community. The Homeworld Remastered Collection introduces Relic's acclaimed space strategy games Homeworld. 
+                        Experience the epic space strategy games that redefined the RTS genre. Control your fleet and build an armada across more than 30 single-player missions. Choose unit types, fleet formations and flight tactics for each strategic situation. Utilize advanced research to construct ships ranging from light fighters to huge carriers and everything in between.
+                    </p>
+                    <p>
+                        As a free bonus, this collection also includes original, non-remastered versions of Homeworld Classic and Homeworld 2 Classic, preserving the purest form of the original releases with compatibility for modern operating systems.
                     </p>
                 </div>
-
             </div>
         </section>
+
+        <section>
+            <div class="game-details">
+                <h1 class="detail-green">Game details</h1>
+                <div class="grid-game-details">
+                    <ul>
+                        <li>
+                            <label class="label-game-details">Company</label>
+                            <p>Gearbox Software</p>                            
+                        </li>
+                        <li>
+                            <label class="label-game-details">Release date</label>
+                            <p>November 16, 2019 </p>
+                        </li>
+                        <li>
+                            <label class="label-game-details">Platforms</label>
+                            <div class="platforms">
+                                <img src="../assets/icons/home/windows.svg" alt="Windows">
+                                <img src="../assets/icons/home/linux.svg" alt="Linux">
+                                <img src="../assets/icons/home/mac.svg" alt="MacOS">
+                            </div>
+                        </li>
+                        <li>
+                            <label class="label-game-details">Editor</label>
+                            <p>2k</p>
+                        </li>
+                        <li>
+                            <label class="label-game-details">Rating</label>
+                            <p>18 +</p>
+                        </li>
+                        <li>
+                            <label class="label-game-details">Genre</label>
+                            <p>Action / Adventure</p>
+                        </li>
+                    </ul>
+                </div>
+                <div class="specification">
+                    <div class="flex-system-specification">
+                        <h2 class="win">Windows</h2>
+                        <h2 class="mac">MacOS</h2>
+                    </div>
+
+                    <div class="flex-table">
+                        <table class="table-system-specification">
+                            <tr>
+                                <th>Minimum</th>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <label>System</label>
+                                    <p>Window 7/8/10</p>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <label>Processor</label>
+                                    <p>Core i3 3.3GHZ</p>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <label>GPU</label>
+                                    <p>Intel HB 4000</p>
+                                </td>
+                            </tr>
+                        </table>
+                        <table class="table-system-specification">
+                            <tr>
+                                <th>Recommend</th>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <label>System</label>
+                                    <p>Window 7/8/10</p>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <label>Processor</label>
+                                    <p>Core i3 3.3GHZ</p>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <label>GPU</label>
+                                    <p>Intel HB 4000</p>
+                                </td>
+                            </tr>
+                        </table>
+                    </div>
+                </div>
+                <hr class="row-horizontal">
+            </div>
+        </section>
+
+        <section>
+            <!-- <div class="section-content">
+                <div class="section-banner">
+                    <h1 class="layout-title">Upcoming</h1>
+                    <div class="banner-free-games">
+                        <img src="../assets/images/detail-banner-free-games.png" alt="">
+                        <div class="banner-content">                
+                            <h2>CS:GO, the most classic game </h2>
+                            <a href="#">Download now</a>
+                        </div>
+                    </div>
+                </div>
+            </div> -->
+
+
+            <div class="section-upcoming">
+                <h1>Upcoming</h1>                
+            </div>
+            <article>
+                <div class="banner">
+
+                </div>
+            </article>
+        </section>
+
     </main>
 
 </body>
