--- a/store/store-borderlands.html
+++ b/store/store-borderlands.html
@@ -190,31 +190,180 @@
         </section>
 
         <section>
-            <!-- <div class="section-content">
-                <div class="section-banner">
-                    <h1 class="layout-title">Upcoming</h1>
-                    <div class="banner-free-games">
+            <div class="section-upcoming">
+                <h1 class="detail-green">Upcoming</h1>
+                <article>
+                    <div class="banner">
                         <img src="../assets/images/detail-banner-free-games.png" alt="">
                         <div class="banner-content">                
                             <h2>CS:GO, the most classic game </h2>
                             <a href="#">Download now</a>
                         </div>
                     </div>
-                </div>
-            </div> -->
-
-
-            <div class="section-upcoming">
-                <h1>Upcoming</h1>                
+                </article>
             </div>
-            <article>
-                <div class="banner">
-
-                </div>
-            </article>
         </section>
 
+        <section>
+            <div class="section-carousel-games">
+                <ul class="carousel-games">
+                    <li class="carousel-games-list">
+                        <img class="games-list-image" src="../assets/images/game-populationzero.png" alt="">
+                        <div class="grid-content-list">
+                            <span class="game-name">Population Zero</span>
+                            <div class="flex-content-list">
+                                <img class="favorite" src="../assets/icons/home/favorite_border.svg" alt="">
+                            </div>
+                            <span class="game-producer">Enplex Games</span>
+                            <div class="flex-price">
+                                <span class="price">$215,00</span>
+                            </div>
+                        </div>
+                    </li>
+
+                    <li class="carousel-games-list">
+                        <img class="games-list-image" src="../assets/images/game-projectwinter.png" alt="">
+                        <div class="grid-content-list">
+                            <span class="game-name">Project Winter</span>
+                            <div class="flex-content-list">
+                                <img class="favorite" src="../assets/icons/home/favorite_border.svg" alt="">
+                            </div>
+                            <span class="game-producer">Other Ocean</span>
+                            <div class="flex-price">
+                                <span class="price">$215,00</span>
+                            </div>
+                        </div>
+                    </li>
+
+                    <li class="carousel-games-list">
+                        <img class="games-list-image" src="../assets/images/game-remnant.png" alt="">
+                        <div class="grid-content-list">
+                            <span class="game-name">Remant</span>
+                            <div class="flex-content-list">
+                                <img class="favorite" src="../assets/icons/home/favorite_border.svg" alt="">
+                            </div>
+                            <span class="game-producer">Gunfire Games</span>
+                            <div class="flex-price">
+                                <span class="price">$215,00</span>
+                            </div>
+                        </div>
+                    </li>
+
+                    <li class="carousel-games-list">
+                        <img class="games-list-image" src="../assets/images/game-borderlands.png" alt="">
+                        <div class="grid-content-list">
+                            <span class="game-name">Borderlands 3</span>
+                            <div class="flex-content-list">
+                                <img class="favorite" src="../assets/icons/home/favorite_border.svg" alt="">
+                            </div>
+                            <span class="game-producer">Gearbox Software</span>
+                            <div class="flex-price">
+                                <span class="price">$215,00</span>
+                            </div>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+            <div class="section-arrow-next">
+                <span><img src="../assets/icons/home/arrow-next-white.svg" alt=""></span>
+            </div>
+        </section>
+        <section class="end-section">
+            <div class="section-carousel-games">
+                <h1 class="detail-green">You may like these games</h1>
+                <ul class="carousel-games">
+                    <li class="carousel-games-list">
+                        <img class="games-list-image" src="../assets/images/game-populationzero.png" alt="">
+                        <div class="grid-content-list">
+                            <span class="game-name">Population Zero</span>
+                            <div class="flex-content-list">
+                                <img class="favorite" src="../assets/icons/home/favorite_border.svg" alt="">
+                            </div>
+                            <span class="game-producer">Enplex Games</span>
+                            <div class="flex-price">
+                                <span class="price">$215,00</span>
+                            </div>
+                        </div>
+                    </li>
+
+                    <li class="carousel-games-list">
+                        <img class="games-list-image" src="../assets/images/game-projectwinter.png" alt="">
+                        <div class="grid-content-list">
+                            <span class="game-name">Project Winter</span>
+                            <div class="flex-content-list">
+                                <img class="favorite" src="../assets/icons/home/favorite_border.svg" alt="">
+                            </div>
+                            <span class="game-producer">Other Ocean</span>
+                            <div class="flex-price">
+                                <span class="price">$215,00</span>
+                            </div>
+                        </div>
+                    </li>
+
+                    <li class="carousel-games-list">
+                        <img class="games-list-image" src="../assets/images/game-remnant.png" alt="">
+                        <div class="grid-content-list">
+                            <span class="game-name">Remant</span>
+                            <div class="flex-content-list">
+                                <img class="favorite" src="../assets/icons/home/favorite_border.svg" alt="">
+                            </div>
+                            <span class="game-producer">Gunfire Games</span>
+                            <div class="flex-price">
+                                <span class="price">$215,00</span>
+                            </div>
+                        </div>
+                    </li>
+
+                    <li class="carousel-games-list">
+                        <img class="games-list-image" src="../assets/images/game-borderlands.png" alt="">
+                        <div class="grid-content-list">
+                            <span class="game-name">Borderlands 3</span>
+                            <div class="flex-content-list">
+                                <img class="favorite" src="../assets/icons/home/favorite_border.svg" alt="">
+                            </div>
+                            <span class="game-producer">Gearbox Software</span>
+                            <div class="flex-price">
+                                <span class="price">$215,00</span>
+                            </div>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </section>
     </main>
+
+    <footer>
+        <div class="footer-content">
+            <img class="logo-won-black" src="../assets/logos/won-black.svg" alt="Logo on">
+            <div class="grid-footer">
+                <div class="contact">
+                    <h2>contact</h2>
+                    <p>suporte@wongames.gg</p>
+                    <p>+55 21 33283719</p>
+                </div>
+                <div class="followUs">
+                    <h2>follow us</h2>
+                    <a href="#">Instagram</a>
+                    <a href="#">Twitter</a>
+                    <a href="#">Youtube</a>
+                    <a href="#">Facebook</a>
+                </div>
+                <div class="links">
+                    <h2>links</h2>
+                    <a href="#">Home</a>
+                    <a href="#">Store</a>
+                    <a href="#">Discover</a>
+                </div>
+                <div class="location">
+                    <h2>location</h2>
+                    <p>Rua 7 de Maio</p>
+                    <p>527 - 89020330</p>
+                    <p>Rio de Janeiro, Brasil</p>
+                </div>
+            </div>
+            <p class="copywriting">Won Games 2020 © Todos os Direitos Reservados</p>
+        </div>
+    </footer>
 
 </body>
 </html>
