--- a/index.html
+++ b/index.html
@@ -104,8 +104,7 @@
             </div>
         </section>
 
-        <section class="teste">
-
+        <section class="background-polygon">
             <div class="section-content">
                 <div class="section-banner">
                     <h1 class="layout-title">Most popular</h1>
@@ -227,7 +226,9 @@
             <div class="section-content">
                 <div class="section-banner">
                     <div class="banner">
-                        <div class="banner-content">                
+                        <div class="banner-content"
+                            id="banner-content-left"
+                        >                
                             <h2>Read Dead it’s back</h2>
                             <p>Come see John’s new adventures</p>
                             <a href="#">Buy now</a>
